--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="app">
-        {{ message }},{{data1}}
+        {{ message }},NISHUOSM{{data1}}
     </div>
 </body>
 <script>
